--- a/App Owns Data/PowerBIEmbedded_AppOwnsData/Web.config
+++ b/App Owns Data/PowerBIEmbedded_AppOwnsData/Web.config
@@ -13,19 +13,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="applicationId" value="" />
-    <add key="workspaceId" value="" />
+    <add key="applicationId" value="3aa15374-db61-4b46-9337-e7ed9719a20e" />
+    <add key="workspaceId" value="c162654e-37ff-459f-a60d-a6f2c7e16def" />
     <!-- The id of the report to embed. If empty, will use the first report in group -->
-    <add key="reportId" value="" />
+    <add key="reportId" value="07cfe1e8-c82d-4d42-aee2-22ba878297a9" />
 
     <!-- Fill Tenant ID in authorityUrl-->
-    <add key="authorityUrl" value="https://login.microsoftonline.com/Fill_Tenant_ID/oauth2/authorize" />
+    <add key="authorityUrl" value="https://login.microsoftonline.com/47e4f770-2f18-4908-ad73-5ee59a4fa4ee/oauth2/authorize" />
     <add key="resourceUrl" value="https://analysis.windows.net/powerbi/api" />
     <add key="apiUrl" value="https://api.powerbi.com/" />
     <add key="embedUrlBase" value="https://app.powerbi.com/" />
-    <!-- Note: Do NOT leave your credentials on code. Save them in secure place. -->
-    <add key="pbiUsername" value="" />
-    <add key="pbiPassword" value="" />
+     <!--Note: Do NOT leave your credentials on code. Save them in secure place.--> 
+    <add key="pbiUsername" value="datareports@visiblescm.com" />
+    <add key="pbiPassword" value="Visible1!" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -86,6 +86,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
